--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ ol {
 
 .result__video {
   object-fit: cover;
+  object-position: center;
   width: 100%;
   height: 100%;
 }
@@ -93,6 +94,9 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 19px;
   height: 19px;
   border: 1px solid #fff;
@@ -105,10 +109,11 @@ ol {
   justify-content: space-between;
 }
 
-.search-form__checkbox:checked + .search-form__pseudo-checkbox {
-  outline: 1px solid #000;
-  outline-offset: -2px;
-  background-color: #fff;
+.search-form__checkbox:checked+.search-form__pseudo-checkbox::after {
+  content: "";
+  width: 15px;
+  height: 15px;
+  background-color: rgb(255, 255, 255);
 } 
   
 .search-form__checkbox:focus {
@@ -151,6 +156,7 @@ ol {
   font-size: 18px;
   font-weight: 400;
   appearance: none;
+  padding: 0;
 }
 
 .search-form__textfield:active {
@@ -260,6 +266,10 @@ ol {
   color: rgba(255, 255, 255, 1);
 }
 
+.content__card-link:focus {
+  outline: none;
+}
+
 .content__card-link_current {
   background-color: rgba(84, 80, 80, 1);
 }
@@ -288,7 +298,7 @@ ol {
 
 .content__video-card-title {
   color: #FFF;
-  font-family: 'Oswald', sans-serif;;
+  font-family: 'Oswald', sans-serif;
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
