--- a/styles/style.css
+++ b/styles/style.css
@@ -264,10 +264,23 @@ ol {
   display: block;
   text-decoration: none;
   color: rgba(255, 255, 255, 1);
+  margin: 2px;
+}
+
+.content__card-link:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.content__card-link:hover {
+  text-decoration-line: underline;
 }
 
 .content__card-link:focus {
   outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
 }
 
 .content__card-link_current {
@@ -277,23 +290,6 @@ ol {
 .content__video-card {
   display: flex;
   justify-content: space-between;
-}
-
-.content__video-card:active {
-  background-color: rgba(84, 80, 80, 1);
-}
-
-.content__video-card:hover {
-  text-decoration-line: underline;
-}
-
-.content__video-card:focus {
-  outline: none;
-}
-
-.content__video-card:has(:focus-visible) {
-  outline: 1px solid #fff;
-  outline-offset: -2px;
 }
 
 .content__video-card-title {
